# rift-plugin

./: Cargo.toml  README.md
assets/: base.css
crates/hug-accumulator/: Cargo.toml
crates/hug-accumulator/src/: accumulator.rs  audio_block.rs  consumer.rs  lib.rs
crates/hug-accumulator/src/consumer/: mod.rs
crates/hug-accumulator/src/consumers/: audio_peaks.rs  mod.rs  spectrogram.rs
crates/hug-accumulator/src/consumers/windowed_peaks/: window.rs
crates/hug-derive/: Cargo.toml
crates/hug-derive/src/: derive_extensions.rs  derive_param.rs  lib.rs  param_builder.rs
crates/hug-fft/: Cargo.toml
crates/hug-fft/src/: lib.rs
crates/hug-resolver/: Cargo.toml
crates/hug-resolver/src/: lib.rs
crates/hug-shared/: Cargo.toml
crates/hug-shared/src/: lib.rs
crates/hug-shared/src/utils/: interpo.rs  mod.rs
crates/rift-plugin-accumulator/: Cargo.toml  README.md
crates/rift-plugin-accumulator/src/: accumulator.rs  audio_block.rs  lib.rs
crates/rift-plugin-accumulator/src/accumulator/: channel.rs  inner.rs  mod.rs  tests.rs
crates/rift-plugin-accumulator/src/consumers/: audio_peaks.rs  consumer_dispatcher.rs  mod.rs  spectrogram.rs  traits.rs
crates/rift-plugin-accumulator/src/consumers/windowed_peaks/: bucket.rs  mod.rs  peaks.rs  window.rs
crates/rift-plugin-core/: Cargo.toml
crates/rift-plugin-core/src/: lib.rs  transport.rs
crates/rift-plugin-core/src/gui/: events.rs  gui_traits.rs  mod.rs
crates/rift-plugin-core/src/params/: mod.rs  param_bool.rs  param_enum.rs  param_float.rs  param_int.rs  param_queue.rs  ptr.rs  traits.rs
crates/rift-plugin-core/src/params/param_queue_impl/: control_points.rs  mod.rs
crates/rift-plugin-core/src/utils/: bounded_vec.rs  conversion.rs  dequeue_buffer.rs  interpo.rs  lfo.rs  mod.rs  multi_channel.rs  notes.rs  once_vec.rs  spaces.rs
crates/rift-plugin-core/src/utils/interpo/: buffer_interpo.rs  function_interpo.rs  mod.rs
crates/rift-plugin-derive/: Cargo.toml
crates/rift-plugin-derive/src/: derive_extensions.rs  derive_param.rs  enum_param.rs  lib.rs  param_builder.rs
crates/rift-plugin-dsp/: Cargo.toml
crates/rift-plugin-dsp/src/filters/: mod.rs
crates/rift-plugin-dsp/src/filters/biquads/: biquad_args.rs  biquad_cascade.rs  biquad_filter.rs  biquad_qs.rs  mod.rs  utils.rs
crates/rift-plugin-dsp/src/filters/svf/: mod.rs
crates/rift-plugin-dsp/src/oscillator/: mod.rs  oscillator.rs  oscillator_position.rs
crates/rift-plugin-oscillator/: Cargo.toml
crates/rift-plugin-oscillator/src/: lib.rs  oscillator.rs  oscillator_position.rs
crates/rift-plugin-resolver/: Cargo.toml
crates/rift-plugin-resolver/src/: lib.rs  tests.rs
crates/rift-plugin-shared/: Cargo.toml
crates/rift-plugin-shared/src/: lib.rs  test_macros.rs  transport.rs
crates/rift-plugin-shared/src/gui/: events.rs  gui_traits.rs
crates/rift-plugin-shared/src/params/: mod.rs  param_float.rs  ptr.rs  traits.rs
crates/rift-plugin-shared/src/utils/: conversion.rs  db_conversion.rs  mod.rs  spaces.rs
crates/rift-plugin-vizia/: Cargo.toml
crates/rift-plugin-vizia/src/: lib.rs  vizia.rs  vizia_rift.rs
crates/rift-plugin-vizia/src/elements/: consumer_dispatch.rs  control_points.rs  control_points_editor.rs  dropdown.rs  grid.rs  mod.rs  oscilloscope.rs  param_button.rs  param_knob.rs  param_slider.rs  param_xy.rs  peak_viewer.rs  plot_xy.rs  popup.rs  position_indicator.rs
crates/rift-plugin-vizia/src/utils/: active_element.rs  cached_texture.rs  comparative_vec.rs  draw_utils.rs  gui_events.rs  handle_generic_extensions.rs  lens.rs  mod.rs  viewport_transform.rs
examples/buffer-iter-benchmark/: Cargo.toml  README.md
examples/buffer-iter-benchmark/src/: main.rs  utils.rs
examples/simple_effect_example/: Cargo.toml  style.css
examples/simple_effect_example/src/: gui.rs  lib.rs  logging.rs  params.rs  plugin.rs  shared.rs
examples/simple_instrument_test/: Cargo.toml
examples/simple_instrument_test/src/: lib.rs
src/: lib.rs  ty.rs
src/buffers/: buffer.rs  buffers.rs  frame.rs  mod.rs  zip_events.rs
src/context/: default.rs  gui_context.rs  init_context.rs  latency.rs  main_thread_context_traits.rs  mod.rs  process_context.rs  tasks.rs
src/context/featured/: latency.rs  mod.rs
src/gui/: events.rs  gui_trait.rs  mod.rs  vizia.rs
src/gui/elements/: consumer_dispatch.rs  grid.rs  mod.rs  oscilloscope.rs  param_binding.rs  param_button.rs  param_knob.rs  param_slider.rs  param_xy.rs  peak_viewer.rs
src/gui/utils/: audio_peak.rs  denormalizer.rs  draw_utils.rs  gui_events.rs  handle_generic_extensions.rs  lens.rs  mod.rs  peak_bucket.rs  viewport_transform.rs  windowed_buffer.rs
src/params/: atomic_f32.rs  atomic_f64.rs  mod.rs  param_bool.rs  param_enum.rs  param_float.rs  param_int.rs  param_ptr.rs  param_trait.rs
src/processing/: buffer.rs  mod.rs
src/type_wrapper/: audio_ports.rs  midi.rs  midi_message.rs  midi_port.rs  mod.rs
src/utils/: basics.rs  id_generator.rs  mod.rs  value_watcher.rs
src/wrapper/: factory.rs  hosts_messages.rs  main.rs  main_thread.rs  mod.rs  processor.rs  shared.rs  shared_states.rs
src/wrapper/main_thread/: context_menu.rs  latency.rs  midi.rs  mod.rs  notes.rs  params.rs  ports.rs  state.rs  wrapper_gui.rs
