[package]
name = "clack-hug"
version = "0.1.0"
edition = "2024"

[dependencies]
hug-derive = { workspace = true }
hug-accumulator = { workspace = true }
vizia = { workspace = true }
vizia_baseview = { workspace = true }

bon = "3.8.2"
clack-plugin = { git = "https://github.com/prokopyl/clack"}
clack-extensions = { git = "https://github.com/prokopyl/clack", features = [
  "audio-ports",
  "clack-plugin",
  "gui",
  "note-ports",
  "params",
  "raw-window-handle_05",
  "state",
  "latency"
] }

raw-window-handle = "0.5.0"
log = "0.4"
paste = "1.0.15"
crossbeam-queue = {workspace = true}
parking_lot = { workspace = true }


[workspace]
resolver = "2"
members = ["crates/hug-accumulator","crates/hug-derive", "crates/hug-resolver"]

[workspace.dependencies]
hug-derive  = { path = "crates/hug-derive" }
hug-resolver = { path = "crates/hug-resolver" }
hug-accumulator = { path = "crates/hug-accumulator" }
vizia = { git = "https://github.com/sacha-renault/vizia", branch = "event-queue-per-instance"}
vizia_baseview = { git = "https://github.com/sacha-renault/vizia", branch = "event-queue-per-instance"}
crossbeam-queue = "0.3.12"
parking_lot = "0.12.5"