[package]
name = "rift-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
rift-plugin-derive = { workspace = true }
rift-plugin-shared = { workspace = true }
rift-plugin-accumulator = { workspace = true }

clack-plugin = { workspace =  true }
clack-extensions = { workspace =  true }

vizia = { workspace = true }
vizia_baseview = { workspace = true }

bon = "3.8.2"
serde_json = { version = "1" }
log = { workspace = true }
paste = "1.0.15"
crossbeam-queue = {workspace = true}
parking_lot = { workspace = true }


[workspace]
resolver = "2"
members = [
  "crates/rift-plugin-accumulator",
  "crates/rift-plugin-derive", 
  "crates/rift-plugin-resolver", 
  "crates/rift-plugin-shared", 
  "crates/rift-plugin-vizia"
]

[workspace.dependencies]
rift-plugin-derive  = { path = "crates/rift-plugin-derive" }
rift-plugin-resolver = { path = "crates/rift-plugin-resolver" }
rift-plugin-accumulator = { path = "crates/rift-plugin-accumulator" }
rift-plugin-shared = { path = "crates/rift-plugin-shared" }
rift-plugin-vizia = { path = "crates/rift-plugin-vizia" }

vizia = { git = "https://github.com/sacha-renault/vizia", branch = "event-queue-per-instance"}
vizia_baseview = { git = "https://github.com/sacha-renault/vizia", branch = "event-queue-per-instance"}

clack-plugin = { git = "https://github.com/prokopyl/clack" }
clack-extensions = { git = "https://github.com/prokopyl/clack", features = [
  "audio-ports",
  "clack-plugin",
  "gui",
  "note-ports",
  "params",
  "raw-window-handle_05",
  "state",
  "latency",
  "context-menu",
] }

crossbeam-queue = "0.3.12"
parking_lot = "0.12.5"
rustfft = "6.4.1"
raw-window-handle = "0.5.0"
log = "0.4"
