[package]
name = "rift-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
rift-plugin-derive = { workspace = true }
rift-plugin-core = { workspace = true }
rift-plugin-accumulator = { workspace = true }
rift-plugin-dsp = { workspace = true }

clack-plugin = { workspace =  true }
clack-extensions = { workspace =  true }

bon = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
crossbeam-queue = {workspace = true}
parking_lot = { workspace = true }

[workspace]
resolver = "2"
members = [
  "crates/rift-plugin-accumulator",
  "crates/rift-plugin-derive", 
  "crates/rift-plugin-resolver", 
  "crates/rift-plugin-core", 
  "crates/rift-plugin-vizia", 
  "crates/rift-plugin-dsp",

  "examples/buffer-iter-benchmark",
  "examples/simple_effect_example",
  "examples/simple_instrument_test"
]

[workspace.dependencies]
rift-plugin-derive  = { path = "crates/rift-plugin-derive" }
rift-plugin-resolver = { path = "crates/rift-plugin-resolver" }
rift-plugin-accumulator = { path = "crates/rift-plugin-accumulator" }
rift-plugin-core = { path = "crates/rift-plugin-core" }
rift-plugin-vizia = { path = "crates/rift-plugin-vizia" }
rift-plugin-dsp = { path = "crates/rift-plugin-dsp" }

vizia = { git = "https://github.com/sacha-renault/vizia", branch = "rift-vizia", default-features = false, features = [
 "baseview", 
#  "rayon" 
]}

clack-plugin = { git = "https://github.com/prokopyl/clack" }
clack-extensions = { git = "https://github.com/prokopyl/clack", features = [
  "audio-ports",
  "clack-plugin",
  "gui",
  "note-ports",
  "params",
  "raw-window-handle_05",
  "state",
  "latency",
  "context-menu",
] }

crossbeam-queue = "0.3.12"
parking_lot = "0.12.5"
rustfft = "6.4.1"
raw-window-handle = "0.5.0"
log = "0.4"
bon = "3.8.2"
serde_json = { version = "1" }
