[package]
name = "rift-plugin-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clack-plugin = { workspace =  true }
clack-extensions = { workspace = true }
crossbeam-queue = { workspace = true }
bon = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
serde = { version = "1", features = ["derive"] }