[package]
name = "rift-plugin-vizia"
version = "0.1.0"
edition = "2024"

[dependencies]
rift-plugin-core = { workspace =  true }
rift-plugin-accumulator = { workspace =  true }
rift-plugin-derive = { workspace =  true }

vizia = { workspace = true, default-features = false }

clack-plugin = { workspace =  true }
clack-extensions = { workspace = true }

log = { workspace = true }
raw-window-handle = { workspace = true }